[gd_scene load_steps=11 format=3 uid="uid://1x2owrq46xfb"]

[ext_resource type="Script" path="res://main.gd" id="1_b8yb5"]
[ext_resource type="PackedScene" uid="uid://6ynptgi42nqf" path="res://player/player.tscn" id="2_v28bl"]
[ext_resource type="Script" path="res://inventory/inventory_data_equip.gd" id="3_2k7q7"]
[ext_resource type="PackedScene" uid="uid://cmxq7eqyaxeqv" path="res://hud.tscn" id="3_6ok3w"]
[ext_resource type="Resource" uid="uid://cdxvp5ncpsxae" path="res://test_inv.tres" id="3_l02lj"]
[ext_resource type="Script" path="res://inventory/inventory_data_hand.gd" id="3_vxr2m"]
[ext_resource type="PackedScene" uid="uid://dogyg4nl6knwa" path="res://scenes/potty.tscn" id="8_7g5l2"]
[ext_resource type="Script" path="res://inventory/slot_data.gd" id="8_48rsi"]

[sub_resource type="Resource" id="Resource_agnid"]
script = ExtResource("3_vxr2m")
slot_datas = Array[ExtResource("8_48rsi")]([null])

[sub_resource type="Resource" id="Resource_6xcuw"]
script = ExtResource("3_2k7q7")
slot_datas = Array[ExtResource("8_48rsi")]([null])

[node name="Main" type="Node"]
script = ExtResource("1_b8yb5")

[node name="Player" parent="." instance=ExtResource("2_v28bl")]
visible = false
hand_inventory_data = SubResource("Resource_agnid")
equip_inventory_data = SubResource("Resource_6xcuw")
inventory_data = ExtResource("3_l02lj")

[node name="RoomContainer" type="Node" parent="."]

[node name="HUD" parent="." instance=ExtResource("3_6ok3w")]

[node name="InventoryInterface" parent="HUD" index="2"]
visible = false

[node name="ExternalInventory" parent="HUD/InventoryInterface" index="1"]
visible = false

[node name="HandInventory" parent="HUD/InventoryInterface" index="3"]
layout_mode = 0
offset_left = 499.0
offset_top = 263.0
offset_right = 539.0
offset_bottom = 303.0

[node name="EquipInventory" parent="HUD/InventoryInterface" index="4"]
layout_mode = 0
offset_left = 397.0
offset_top = 73.0
offset_right = 437.0
offset_bottom = 113.0

[node name="HotBarInventory" parent="HUD" index="3"]
visible = false

[node name="Potty" parent="." instance=ExtResource("8_7g5l2")]
visible = false

[connection signal="hit" from="Player" to="Player" method="hit_damage"]
[connection signal="potty" from="Player" to="Potty" method="_get_player_pos"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="drop_slot_data" from="HUD/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="visibility_changed" from="HUD/InventoryInterface" to="HUD/InventoryInterface" method="_on_visibility_changed"]

[editable path="Player"]
[editable path="HUD"]
[editable path="Potty"]
